[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/scripts/Door.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/door.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 80 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 80 )

[node name="Door" type="StaticBody2D"]
collision_layer = 64
collision_mask = 0
script = ExtResource( 1 )

[node name="doorareaRight" type="Area2D" parent="."]
collision_layer = 2

[node name="right" type="CollisionShape2D" parent="doorareaRight"]
position = Vector2( 64, 80 )
shape = SubResource( 1 )

[node name="door" type="CollisionShape2D" parent="."]
position = Vector2( 32, 80 )
shape = SubResource( 2 )

[node name="PricelabelRight" type="Label" parent="."]
margin_left = 64.0
margin_top = 32.0
margin_right = 128.0
margin_bottom = 63.0
custom_colors/font_color = Color( 0.141176, 1, 0.607843, 1 )
text = "
"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PricelabelLeft" type="Label" parent="."]
margin_left = -64.0
margin_top = 32.0
margin_bottom = 63.0
custom_colors/font_color = Color( 0.141176, 1, 0.607843, 1 )
text = "
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="doorareaLeft" type="Area2D" parent="."]
collision_layer = 2

[node name="left" type="CollisionShape2D" parent="doorareaLeft"]
position = Vector2( 0, 80 )
shape = SubResource( 1 )

[node name="doorSprite" type="Sprite" parent="."]
position = Vector2( 32, 80 )
scale = Vector2( 1, 1.25 )
z_index = 32
texture = ExtResource( 2 )

[connection signal="body_entered" from="doorareaRight" to="." method="_on_doorareaRight_body_entered"]
[connection signal="body_exited" from="doorareaRight" to="." method="_on_doorareaRight_body_exited"]
[connection signal="body_entered" from="doorareaLeft" to="." method="_on_doorareaLeft_body_entered"]
[connection signal="body_exited" from="doorareaLeft" to="." method="_on_doorareaLeft_body_exited"]
